vynos/frame/pages/WalletPage/Receive/receive.css
.qrImage {
  padding: 20px;
  background: white;
  border-radius: 10px;
}

.container {
  background-color: #f0f0f0;
  color: #797979;;
  padding: 2rem;
  padding-bottom: 0;
}

.header {
  font-family: gt-haptik;
  font-size: 1.6rem;
  font-weight: 600;
  margin: 0 0 1rem 1rem;
}

.descriptionWrapper {
  padding: 0 3rem;
}

.addressWrapper {
  padding: 2rem;
}

.ctaIcon {
  background-image: url(../../../styles/images/copy-white.svg);
  height: 1rem;
  width: 1rem;
  background-repeat: no-repeat;
  background-size: 90%;
  background-position: center 2px;
  margin: 0 4px;
}

.ctaText {
  font-weight: 600;
  position: relative;
  top: 1px;
}

.bottomWrapper {
  margin-left: 1rem;
  margin-top: 2rem;
  display: flex;
}

.buttonWrapper {
  flex-grow: 1;
  margin-left: 2rem;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: flex-end;
}

.buttonContent {
  display: flex;
  align-items: center;
  justify-content: center;
}

.guideButton {
  background-color: white;
  border: 0;
  margin-top: 1rem;
}

.minAmount {
  display: flex;
  align-items: center;
  font-size: 0.8rem;
  line-height: 0.8em;
  font-family: cartographmonocf;
  margin: 0 auto 1.2em;
  font-weight: 600;
}

.input {
  display: flex;
  margin-bottom: 16px;
}


.input input {
  font-family: CartographMonoCF;
  border-bottom: none !important;
  border-radius: 4rem !important;
  padding-left: 1rem !important;
  padding-right: 1rem !important;
  text-overflow: ellipsis;
  font-size: 1.1rem;
  font-weight: 600;
  text-transform: none !important;
  background-color: white;
  cursor: text !important;
}

.input input:active {
  background: #fbf8f8;
}

.content {
  display: flex;
  margin: 2rem 1rem;
  font-family: cartographmonocf;
  font-size: 0.8rem;
  font-weight: 600;
  justify-content: space-between;
  letter-spacing: 0.4px;
  align-items: center;
}

.whiteRect {
  background: #f9f9f9;
  display: flex;
  border-radius: 10px;
  padding: 20px 30px;
  flex-direction: column;
  font-size: 0.75rem;
}

.rectRow {
  display: flex;
  margin: 0.3rem 0;
}

.rowLabel {
  flex-basis: 78px;
}

.spaced {
  letter-spacing: 0.6px;
}

.transactionState {
  margin-bottom: 1rem;
  width: 100%;
  flex: 1;
  flex-direction: row;
  align-items: center;
}

.transactionStateMessage {
  font-size: 0.8rem;
  margin-left: 20px;
}

.stepsWrapper {
  position: relative;
}

.steps {
  font-size: 0.7rem;
  font-family: cartographmonocf;
  position: absolute;
  display: flex;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
}

.oneThird {
  flex-basis: 29%;
}

.twoThirds {
  flex-basis: 67%;
}

.left {
  flex-basis: 55%;
  align-items: center;
  display: flex;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 5%;
  padding-left: 0;
  line-height: 1.1rem;
}

.right {
  display: flex;
  flex-basis: 40%;
  padding-left: 5%;
  margin: 3% 0;
  align-items: center;
  border-left: 1px solid #ccc;
  line-height: 1.5rem;
}

.quarter {
  display: flex;
  flex-direction: column;
  margin-right: 1rem;
  line-height: 1.5rem;
  align-items: flex-start;
}

.quarter:first-child {
  width: 5rem;
}

.quarter:last-child {
  margin-right: 0;
}

.currencyIcon {
  margin-right: 0.5rem;
}

.inlineCurrency {
  margin: 0 8px;
}

.minIcon {
  margin: 0 0.4rem;
  background-color: white;
}

.recoverText {
  text-align: center;
  position: relative;
  top: 1rem;
}

.recoverText a {
  color: #b7b7b7 !important;
  text-decoration: none;
  font-size: 0.6rem;
}

.smallDown {
  display: none;
}

@media only screen and (max-width : 480px) {

  .descriptionWrapper {
    padding: 0 2rem;
  }

  .description {
    font-size: 1rem;
  }

  .qrWrapper {
    padding: 0 2rem;
  }

  .ctaInputValue {
    flex: 1 1 auto;
    width: 0;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    display: inline-block;
    line-height: 2.5rem;
    align-items: center;
  }

  .walletQR {
    width: 6rem;
    height: 6rem;
  }

  .bottomWrapper {
    flex-direction: column-reverse;
    margin-left: 0;
    margin-top: 0;
  }

  .header {
    margin-left: 0;
    margin-bottom: 2rem;
    font-size: 1.4rem;
  }
  
  .buttonWrapper {
    margin: 0;
  }

  .qrImage {    
    margin: 2rem auto 0;
    display: block;
  }

  .description {
    font-size: 0.6rem;
    margin-right: 0;
    margin-left: 0;
  }

  .smallDown {
    display:block;
  }

  .mediumUp {
    display: none;
  }

  .input input {
    font-size: 0.7rem;
  }
}

